HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumInvalidDiscriminant/Source/Main.uv
//! Rejected enum specimen for an invalid discriminant literal.

public enum InvalidDiscriminantPayload {
    First = 18446744073709551616
}
